force-app/main/default/objects/Exam__c/fields/Exam_Number__c.field-meta.xml
<CustomField>
    <fullName>Exam_Number__c</fullName>
    <label>Exam Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>