force-app/main/default/objects/Exam__c/fields/Registrant__c.field-meta.xml
<CustomField>
    <fullName>Registrant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registrant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exams</relationshipLabel>
    <relationshipName>Registrant_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>