force-app/main/default/objects/Exam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registrant__c</columns>
    <columns>Result__c</columns>
    <columns>Type__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>